Fixed h3 console. Minor style fixes.

--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -214,7 +214,9 @@
             class="hl-text">Левой Кнопкой Мыши</span> на <span class="hl-text">"Explorer"</span>. Откроется проводник в
           том месте, где находится Ваш файл.</p>
         <img src="https://i.imgur.com/kNb2ERu.png" alt="File location" height="600px">
-        <p>Чтобы заархивировать файл, нажмите <span class="hl-text">Правой Кнопкой Мыши</span> по файлу с кодом, затем выберите <span class="hl-text">"Compress to..."</span> и <span class="hl-text">"ZIP File"</span>. Полученный архив отправляйте в качестве
+        <p>Чтобы заархивировать файл, нажмите <span class="hl-text">Правой Кнопкой Мыши</span> по файлу с кодом, затем
+          выберите <span class="hl-text">"Compress to..."</span> и <span class="hl-text">"ZIP File"</span>. Полученный
+          архив отправляйте в качестве
           выполненного домашнего задания.</p>
         <img src="https://i.imgur.com/h8ecqO8.png" alt="Archiving" width="600px">
       </div>
@@ -222,7 +224,7 @@
         <h2>Домашнее Задание 8.1</h2>
         <p>Выведите в консоль следующую надпись, сохранив формат и используя один <code
             class="python"><b>print</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>To be
 or not
@@ -233,7 +235,7 @@ to be</code></pre>
         <h2>Домашнее Задание 8.2</h2>
         <p>Выведите в консоль следующую надпись, сохранив формат и используя один <code
             class="python"><b>print</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>"Life is what happens
        when
@@ -248,7 +250,7 @@ to be</code></pre>
           <span class="hl-text">сумму для конвертации</span>, затем <span class="hl-text">выводит в консоль
             конвертированную сумму</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите сумму для конвертации: <span class="input">100</span>
 Введите исходную валюту: <span class="input">USD</span>
@@ -267,7 +269,7 @@ to be</code></pre>
             коммунальные услуги</span>, затем <span class="hl-text">выводит в консоль сумму, которая останется после
             всех выплат</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите зарплату за месяц: <span class="input">1000</span>
 Введите сумму месячного платежа по кредиту в банке: <span class="input">250</span>
@@ -281,7 +283,7 @@ to be</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли рост</span> и <span
             class="hl-text">выводит в консоль оптимальный вес на основе роста</span>. Чтобы найти оптимальный вес
           разделите <span class="hl-text">рост</span> на <code class="python"><b>2.25</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите рост: <span class="input">180</span>
 
@@ -295,7 +297,7 @@ to be</code></pre>
             из этих чисел одно число</span> и <span class="hl-text">выводит одно число в консоль, полученное из
             введённых данных</span>. Работать
           именно как с <span class="hl-text">числами</span>, а не строками!</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите год: <span class="input">2000</span>
 Введите месяц: <span class="input">12</span>
@@ -310,7 +312,7 @@ to be</code></pre>
             class="hl-text">выводит в консоль количество полных лет</span>, <span class="hl-text">дней</span>, <span
             class="hl-text">часов</span>, <span class="hl-text">минут</span> и <span class="hl-text">секунд</span>.
           Считайте, что в году <code><span class="number"><b>365</b></span></code> дней.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество секунд: <span class="input">31719845</span>
 
@@ -328,7 +330,7 @@ to be</code></pre>
             с консоли общую сумму счёта</span>, <span class="hl-text">процент чаевых</span> и <span
             class="hl-text">количество человек</span>, затем <span class="hl-text">выводит в консоль сумму, которую
             должен оплатить каждый человек</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите общую сумму счета: <span class="input">5000</span>
 Введите процент чаевых: <span class="input">10</span>
@@ -371,7 +373,7 @@ to be</code></pre>
             <code><span class="number"><b>3</b></span></code> раза.
           </li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">1234</span>
 
@@ -408,7 +410,7 @@ to be</code></pre>
             раза.
           </li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">1234</span>
 
@@ -439,7 +441,7 @@ total_salary = salary_per_month * count_month
 print()
 print("Зарплата за", count_month, "месяцев равна", total_salary)</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите зарплату за месяц: <span class="input">500</span>
 
