--- a/Урок 07-09. Введение в Python/Python - PT08.html
+++ b/Урок 07-09. Введение в Python/Python - PT08.html
@@ -127,7 +127,7 @@
         <p>Сотрудник <span class="hl-text">Teston Lebra</span> работает на трёх работах и получает три разные зарплаты.
           Напишите программу, которая <span class="hl-text">запрашивает с консоли три строки зарплаты</span> и <span
             class="hl-text">выводит в консоль итоговую сумму этих зарплат</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первую зарплату: <span class="input">250</span>
 Введите вторую зарплату: <span class="input">1600</span>
@@ -142,7 +142,7 @@
             class="hl-text">запрашивает с консоли сумму кредита</span> и <span class="hl-text">процент</span>, затем
           <span class="hl-text">выводит в консоль сумму, которую нужно вернуть в банк</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите сумму кредита: <span class="input">15000</span>
 Введите процент: <span class="input">10</span>
@@ -156,7 +156,7 @@
           Напишите программу, которая <span class="hl-text">запрашивает с консоли температуру за каждый день</span> и
           <span class="hl-text">выводит в консоль среднее значение</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите температуру в Понедельник: <span class="input">18</span>
 Введите температуру во Вторник: <span class="input">20</span>
@@ -182,7 +182,7 @@
           <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству граммов, затем нацело
           поделить на граммы в банке.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите площадь покраски (квадратные метры): <span class="input">98</span>
 Введите количество грамм требуемое для покраски одного квадратного метра: <span class="input">150</span>
@@ -195,7 +195,7 @@
         <h2>Практическое Задание 8.5</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">выводит в консоль самую правую цифру этого числа</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5869</span>
 
@@ -207,7 +207,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли двузначное число</span> и <span
             class="hl-text">выводит в консоль каждую цифру по отдельности</span>. <span class="hl-text"><b>(2
               способа)</b></span></p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите двузначное число: <span class="input">25</span>
 
@@ -221,7 +221,7 @@
             class="hl-text">выводит в консоль каждую цифру по отдельности</span>.
           <span class="hl-text"><b>(2 способа)</b></span>
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите трёхзначное число: <span class="input">567</span>
 
