--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -198,7 +198,7 @@
           <br>— <span class="hl-text"><b>"F":</b></span> Менее <code><span class="number"><b>50</b></span></code>
           баллов.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество баллов: <span class="input">87</span>
 
@@ -218,7 +218,7 @@
           <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span
             class="hl-text">выводит в консоль ответ</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите логин: <span class="input">root</span>
 Введите пароль: <span class="input">1002</span>
@@ -244,7 +244,7 @@
           <code><span class="string"><b>"Клиент может получить бонус."</b></span></code> или
           <code><span class="string"><b>"Клиент не выполнил условия для получения бонуса."</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Клиент является участником бонусной программы (Y/N): <span class="input">N</span>
 Сумма покупки: <span class="input">1200</span>
@@ -273,7 +273,7 @@
             консоль</span> <code><span class="string"><b>"Доступ разрешён."</b></span></code> или
           <code><span class="string"><b>"Доступ запрещён."</b></span></code> в зависимости от условий.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Права администратора присутствуют (Y/N): <span class="input">Y</span>
 Вы создатель файла (Y/N): <span class="input">N</span>
@@ -317,7 +317,7 @@ if is_accepted:
 else:
     print("Человек не подходит по критериям.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Человеку больше 21 года (Y/N): <span class="input">Y</span>
 Опыт работы (в месяцах): <span class="input">36</span>
@@ -365,7 +365,7 @@ if 61 <= rain_probability and rain_probability <= 80:
 else:
     print("Очень высокая вероятность дождя.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите процентную вероятность дождя: <span class="input">31.5</span>
 
@@ -415,7 +415,7 @@ if condition:
 else:
     print("Студент не может получить стипендию.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите средний балл студента: <span class="input">85</span>
 Введите возраст студента: <span class="input">18</span>
