--- a/Урок 10-14. Операторы ветвлений/Python - HW14.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW14.html
@@ -236,7 +236,7 @@
           <br>— <span class="hl-text"><b>Уровень радиации:</b></span> до
           <code><span class="number"><b>0.3</b></span></code> мкЗв/ч.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите уровень загрязнения воздуха (мг/м³): <span class="input">25</span>
 Введите уровень шума (дБ): <span class="input">65.5</span>
@@ -456,7 +456,7 @@ if 11 <= rating and rating <= 16:
 if 17 <= rating and rating <= 20:
     print("Высокий уровень кандидата, рекомендуется для приема на работу.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите опыт работы (полные года): <span class="input">12</span>
 Введите образование (1 - специальное, 2 - базовое, 3 - отсутствует): <span class="input">1</span>
@@ -504,7 +504,7 @@ if 6 <= acidity and acidity <= 7:
 if acidity >= 7:
     print("Щелочная почва.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите уровень кислотности почвы (pH): <span class="input">6.5</span>
 
