--- a/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
@@ -343,7 +343,7 @@
           <br>— <span class="hl-text"><b>Старость</b></span>: от <code><span class="number"><b>60</b></span></code> и
           выше.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите возраст: <span class="input">24</span>
 
@@ -360,7 +360,7 @@
           <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span
             class="hl-text">выводит в консоль ответ</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите логин: <span class="input">admin</span>
 Введите пароль: <span class="input">5869</span>
@@ -388,7 +388,7 @@
           <br>— <span class="hl-text"><b>Очень сильное ожирение:</b></span> ИМТ
           <code><span class="number"><b>40</b></span></code> и выше.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите вес (кг): <span class="input">81</span>
 Введите рост (метры): <span class="input">1.8</span>
@@ -406,7 +406,7 @@
           <code><span class="string"><b>"S"</b></span></code> или <code><span class="string"><b>"D"</b></span></code>, и
           <code><span class="string"><b>"Другая команда."</b></span></code> в противном случае.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите символ: <span class="input">W</span>
 
@@ -431,7 +431,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины</span> и <span
             class="hl-text">ответ на вопрос</span> <span class="string"><b>"Клиент является участником программы
               лояльности?"</b></span>, затем <span class="hl-text">выводит в консоль итоговую сумму оплаты</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите стоимость корзины: <span class="input">150</span>
 Клиент является участником программы лояльности (Y/N): <span class="input">Y</span>
@@ -451,7 +451,7 @@
           <code><span class="string"><b>"В области видимости."</b></span></code> или
           <code><span class="string"><b>"Вне области видимости."</b></span></code> в зависимости от угла.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите угол (в градусах): <span class="input">380</span>
 
@@ -479,7 +479,7 @@
           <code><span class="string"><b>"Доступ разрешён."</b></span></code> или
           <code><span class="string"><b>"Доступ запрещён."</b></span></code> в зависимости от условий.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Сотрудник имеет специальное разрешение (Y/N): <span class="input">N</span>
 Введите уровень доступа: <span class="input">4</span>
