--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -195,7 +195,7 @@
           пользователь в качестве выбора может вписать число не в диапазоне
           <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>3</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">10</span>
 Введите второе число: <span class="input">5</span>
@@ -225,7 +225,7 @@
           <br>— <span class="hl-text"><b>Вечер:</b></span> от <code><span class="number"><b>18</b></span></code> до
           <code><span class="number"><b>24</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите время в часах: <span class="input">6</span>
 
@@ -258,7 +258,7 @@
             скидки</span> и <span class="hl-text">запрашивает с консоли подтверждение применения скидки</span>. После
           этого программа <span class="hl-text">выводит в консоль сумму оплаты в зависимости от текущей скидки</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите стоимость корзины клиента: <span class="input">500</span>
 Введите количество дней непрерывной покупки: <span class="input">25</span>
@@ -299,7 +299,7 @@
             </div>
           </li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Показать текущую дату
 2. Показать текущее время
@@ -324,7 +324,7 @@
           <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от
           <code><span class="number"><b>1000</b></span></code> и более км.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите расстояние до пункта назначения в километрах: <span class="input">800</span>
 
@@ -359,7 +359,7 @@
           <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span>
           <code><span class="number"><b>6</b></span></code>-<code><span class="number"><b>7 pH</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите уровень освещённости (лк): <span class="input">6000</span>
 Введите температуру (°C): <span class="input">21</span>
