--- a/Урок 10-14. Операторы ветвлений/Python - PT14.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT14.html
@@ -133,7 +133,7 @@
         <p>Если выбран <span class="hl-text">второй пункт</span>, то программа <span class="hl-text">запрашивает с
             консоли два числа</span> и <span class="hl-text">операцию (+, -, *, /)</span>, затем <span
             class="hl-text">выводит в консоль результат операции</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Определить чётность числа
 2. Провести операцию над 2-мя числами
@@ -172,7 +172,7 @@
             счёт</span>.
         </p>
         <p>Считайте, что изначально на счету находится <code><span class="number"><b>250</b></span></code> денег.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Положить деньги на счёт
 2. Снять деньги со счёта
