--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -225,7 +225,7 @@
             class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
             class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на
             <code><span class="number"><b>11</b></span></code> в указанном диапазоне</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
 Введите конец диапазона: <span class="input">32</span>
@@ -247,7 +247,7 @@
           случае программа должна <span class="hl-text">вывести в консоль</span>
           <code><span class="string"><b>"Данные пользователя в порядке."</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите хэш-код (число): <span class="input">283073481295386363459721836860</span>
 
@@ -259,7 +259,7 @@
         <p>Напишите программу, которая <span class="hl-text">позволяет выбрать пользователю вид такси</span>, <span
             class="hl-text">запрашивает с консоли расстояние</span> и <span class="hl-text">выводит в консоль стоимость
             поездки</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Эконом класс (0.3 за 1 км.)
 2. Комфорт класс (0.6 за 1 км.)
@@ -284,7 +284,7 @@
         <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину (только
             стоимость)</span> и <span class="hl-text">оплатить эту корзину (итоговую стоимость)</span>. Считайте, что
           изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Ваш текущий баланс: 1000
 1. Оплатить корзину
@@ -325,7 +325,7 @@
           <span class="hl-text">во время ввода стоимости</span> или <span class="hl-text">количества</span>. Затем
           программа <span class="hl-text">выводит в консоль итоговую стоимость</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите стоимость товара: <span class="input">100</span>
 Введите количество данного товара: <span class="input">5</span>
@@ -349,7 +349,7 @@
               не выдаётся."</b></span>.
         <h3>Подсказка:</h3>
         <p>Вам нужно сделать копию числа и перевернуть его. Затем сравнивать исходное число и перевёрнутое.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите итоговую сумму: <span class="input">232</span>
 
@@ -433,7 +433,7 @@ if is_only_even:
 else:
     print("В номере карты присутствуют нечётные цифры.")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите номер карты: <span class="input">5869586958695869</span>
 
