--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -191,7 +191,7 @@
             консоль числа в порядке возрастания</span>. В противном случае - <span class="hl-text">в порядке
             убывания</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">5</span>
 Введите конец диапазона: <span class="input">2</span>
@@ -209,7 +209,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
             class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Затем <span
             class="hl-text">выводит в консоль таблицу умножения чисел из диапазона</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">3</span>
 Введите конец диапазона: <span class="input">5</span>
@@ -254,7 +254,7 @@
           программу, которая <span class="hl-text">запрашивает с консоли количество дней</span> и затем <span
             class="hl-text">столько же раз запрашивает с консоли температуру</span>. Затем программа <span
             class="hl-text">выводит в консоль среднюю температуру за указанные дни</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество дней: <span class="input">5</span>
 Введите температуру (1): <span class="input">25</span>
@@ -270,7 +270,7 @@
         <h2>Домашнее Задание 18.4</h2>
         <p>Реализуйте меню по примеру из консоли. Используйте вложенный цикл <code class="python"><b>for</b></code> для
           рисования фигур и цикл <code class="python"><b>while</b></code> для меню.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Нарисовать треугольник ниже главной диагонали
 2. Нарисовать треугольник выше главной диагонали
@@ -306,7 +306,7 @@
             class="hl-text">Teston Lebra</span> решил найти все числа, которые принесут ему купон. Напишите программу,
           которая <span class="hl-text">запрашивает с консоли начальное число</span> и <span class="hl-text">конечное
             число</span>, а затем <span class="hl-text">выводит в консоль все числа палиндромы</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">90</span>
 Введите конец диапазона: <span class="input">105</span>
