--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -413,7 +413,7 @@ number = randint(start, end)  # Генерация случайного числ
               class="number"><b>0</b></span> очков означает, что игрок не может делать ставки.</li>
           <li class="no-padding-bottom">Когда игроки делают ставки не забудьте отнять эти ставки из очков игроков.</li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Игрок 1 (Вы): 1000 очков
 Игрок 2: 1000 очков
