--- a/Урок 15-20. Циклы/Python - PT15.html
+++ b/Урок 15-20. Циклы/Python - PT15.html
@@ -124,7 +124,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">выводит в консоль все чётные числа от <code><span class="number"><b>2</b></span></code> до
             введённого числа включительно</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">10</span>
 
@@ -142,7 +142,7 @@
             <code><span class="number"><b>2</b></span></code> числа</span> и <span class="hl-text">выводит в консоль все
             чётные числа от первого введённого до второго введённого числа включительно в порядке возрастания</span>.
           Если первое число больше второго, то нужно поменять их местами.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">6</span>
 Введите второе число: <span class="input">14</span>
@@ -160,7 +160,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли символ</span> и <span
             class="hl-text">число</span>, затем <span class="hl-text">выводит в консоль указанный символ в одну строчку
             в указанном количестве через пробел</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите символ: <span class="input">%</span>
 Введите количество символов: <span class="input">5</span>
@@ -171,7 +171,7 @@
       <div class="right-rect">
         <h2>Практическое Задание 15.4</h2>
         <p>Реализуйте программу по примеру.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Очки первой команды: 0
 Очки второй команды: 0
@@ -211,7 +211,7 @@
             class="hl-text">выводит в консоль</span>
           <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>1. Зарегистрировать аккаунт
 2. Войти
@@ -243,7 +243,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли числа до тех пор, пока не получит
             строку</span> <code><span class="string"><b>"END"</b></span></code> или <span class="hl-text">пустую
             строку</span>, а затем <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число (END - закончить ввод): <span class="input">5</span>
 Введите число (END - закончить ввод): <span class="input">6</span>
@@ -264,7 +264,7 @@
           <code><span class="string"><b>"Номер карты неверный. Вы ввели <span class="number">{число}</span> цифр."</b></span></code>
           в противном случае.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите номер карты: <span class="input">58695869586958690</span>
 
