--- a/Урок 15-20. Циклы/Python - PT17.html
+++ b/Урок 15-20. Циклы/Python - PT17.html
@@ -200,7 +200,7 @@ range(9, 5, -3)</code></pre>
             class="hl-text">вывести в консоль все числа диапазона в обратном порядке с шагом</span>
           <code><span class="number"><b>2</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">2</span>
 Введите конец диапазона: <span class="input">10</span>
@@ -219,7 +219,7 @@ range(9, 5, -3)</code></pre>
             class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
             class="hl-text">вывести в консоль все числа диапазона в порядке убывания</span>, если начало больше конца. В
           противном случае - <span class="hl-text">в порядке возрастания</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">7</span>
 Введите конец диапазона: <span class="input">5</span>
@@ -235,7 +235,7 @@ range(9, 5, -3)</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
             class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
             class="hl-text">вывести в консоль все нечётные числа диапазона в порядке убывания</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
 Введите конец диапазона: <span class="input">5</span>
@@ -250,7 +250,7 @@ range(9, 5, -3)</code></pre>
         <h2>Практическое Задание 17.5</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">выводит в консоль таблицу умножения этого числа</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5</span>
 
@@ -275,7 +275,7 @@ range(9, 5, -3)</code></pre>
             class="hl-text">количество</span>. Программа должна <span class="hl-text">прибавлять введённое количество к
             товару с указанным номером</span>, а в конце <span class="hl-text">выводить в консоль товары</span> и <span
             class="hl-text">их количество</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество поставок: <span class="input">2</span>
 ===============================
@@ -309,7 +309,7 @@ range(9, 5, -3)</code></pre>
           <code><span class="number"><b>7</b></span></code> или больше, то <span class="hl-text">студент считается
             допущенным</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество студентов: <span class="input">5</span>
 Введите оценку студента (1): <span class="input">12</span>
