--- a/Урок 15-20. Циклы/Python - PT18.html
+++ b/Урок 15-20. Циклы/Python - PT18.html
@@ -198,7 +198,7 @@
         <h2>Практическое Задание 18.2</h2>
         <p>Напишите программу, которая <span class="hl-text">с помощью вложенного цикла рисует в консоли квадрат
             указанный ниже</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>0 1 2 3
 1 2 3 4
@@ -211,7 +211,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span
             class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль
             четырёхугольник из символа звёздочки</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите ширину: <span class="input">5</span>
 Введите высоту: <span class="input">3</span>
@@ -226,7 +226,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span
             class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль полый
             четырёхугольник из символа звёздочки</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите ширину: <span class="input">5</span>
 Введите высоту: <span class="input">3</span>
@@ -241,7 +241,7 @@
         <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code>
             внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли
             прямоугольный треугольник из чисел</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>0 1 2 3
 1 2 3
@@ -254,7 +254,7 @@
         <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code>
             внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли
             прямоугольный треугольник из чисел</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>      3
     3 4
