--- a/Урок 21-27. Строки. Списки/Python - HW22.html
+++ b/Урок 21-27. Строки. Списки/Python - HW22.html
@@ -227,7 +227,7 @@
             в консоль</span> <span class="string"><b>"Открывающих скобок больше, чем закрывающих."</b></span>, <span
             class="string"><b>"Закрывающих скобок больше, чем открывающих."</b></span> или <span
             class="string"><b>"Скобки расставлены верно."</b></span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку примера: <span class="input">2 + (10 - 5 - (2 + 10)</span>
 
@@ -238,7 +238,7 @@
         <h2>Домашнее Задание 22.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">выводит в консоль на каждой новой строке предложение до точки включительно</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc. def. hij.</span>
 
@@ -259,7 +259,7 @@ hij.</code></pre>
         <h3>Подсказка:</h3>
         <p>Сперва выделите левое число в одну переменную, операцию в другую, правое число в третью. Затем числа
           приведите к типу <code class="python"><b>int</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите арифметическое выражение: <span class="input">23+12</span>
 
@@ -280,7 +280,7 @@ hij.</code></pre>
             class="python"><b>i + 1</b></code>. Если и на ней находится точка, то ничего не делаем. В противном случае
           увеличиваем счётчик предложений. Учтите, что в этом случае нужно проверять с индекса <span
             class="number"><b>0</b></span> до <code class="python"><b>{размера_строки} - 1</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите текст: <span class="input">abc? defg! hij... klm.</span>
 
@@ -295,7 +295,7 @@ hij.</code></pre>
           <span class="grey"><b>format()</b></span> или <span class="grey"><b>f-строки</b></span>. Команда вывода должна
           быть одна.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите кому сообщение: <span class="input">Teston Lebra</span>
 Введите от кого сообщение: <span class="input">Иван Иванов</span>
@@ -313,7 +313,7 @@ hij.</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку азотистых оснований из первых
             больших</span> и <span class="hl-text">маленьких букв</span> - А/а (Аденин), Г/г (Гуанин), Ц/ц (Цитозин),
           Т/т (Тимин), а затем <span class="hl-text">выводит в консоль сколько каждого из них</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку азотистых оснований: <span class="input">аГцТАЦгтАат</span>
 
@@ -331,7 +331,7 @@ hij.</code></pre>
         <h3>Подсказка:</h3>
         <p>Рассматривайте пару символов - текущий и предыдущий символ. Для этого создайте переменную, которая в самом
           конце цикла копирует текущий индекс.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку для сжатия: <span class="input">abbcccddddeeeea</span>
 
@@ -367,7 +367,7 @@ index = randint(start, end)  # Использование функции для 
             то <span class="string"><b>"ABCDEFGHIJKLMNOPQRSTUVWXYZ"</b></span>. Если специальные символы, то <span
               class="string"><b>"!@#$%&*_-+=?"</b></span>.</li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите длину пароля: <span class="input">8</span>
 Пароль должен содержать цифры (Y/N): <span class="input">Y</span>
