--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -226,7 +226,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, затем <span
             class="hl-text">переводит все заглавные английские буквы в строчные</span> и <span class="hl-text">выводит
             результат в консоль</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">SoMe TeXT</span>
 
@@ -238,7 +238,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">выводит в консоль количество слов в строке</span>. Словом является набор символов <span
             class="hl-text">разделённые пробелами</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc abc     abc</span>
 
@@ -252,7 +252,7 @@
               ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке отсутствует символ из набора
               ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>. Задачу нужно
           решить <span class="hl-text">вложенными циклами</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">12345abc</span>
 
@@ -267,7 +267,7 @@
             от строки</span>. Палиндром — слово или текст, которое читается одинаково <span class="hl-text">слева
             направо</span> и <span class="hl-text">справа налево</span>. Считайте, что строка будет на русском языке.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">А роза упала на лапу Азора</span>
 
@@ -281,7 +281,7 @@
               набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке присутствуют не только
               символы из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc5de</span>
 
@@ -328,7 +328,7 @@ while i < len_text:
 
 print(f"Изменённая строка: {result}")</code></pre>
         </div>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите искомую строку: <span class="input">abcd</span>
@@ -350,7 +350,7 @@ print(f"Изменённая строка: {result}")</code></pre>
           <li class="no-padding-bottom">Используйте алгоритм, который был рассмотрен на уроке, где заглавные буквы нужно
             было заменить на строчные.</li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку текста: <span class="input">abc. def? ghi! jkl.</span>
 
