--- a/Урок 21-27. Строки. Списки/Python - HW26.html
+++ b/Урок 21-27. Строки. Списки/Python - HW26.html
@@ -273,7 +273,7 @@
             <span class="number"><b>300</b></span>.
           </li>
         </ol>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите зарплату сотрудника (1): <span class="input">10000</span>
 Введите зарплату сотрудника (2): <span class="input">8000</span>
@@ -352,7 +352,7 @@
             списка имена</span> и <span class="hl-text">выводит в консоль изменённый список</span>.</p>
         <h3>Подсказки:</h3>
         <p>Для удаления используйте <code class="python"><b>del</b></code>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите имя: <span class="input">Kate</span>
 Введите имя: <span class="input">Jack</span>
