--- a/Урок 21-27. Строки. Списки/Python - PT21.html
+++ b/Урок 21-27. Строки. Списки/Python - PT21.html
@@ -126,7 +126,7 @@
         <p>Напишите программу, которая <span class="hl-text">выводит в консоль слово</span> <span
             class="string"><b>"Python"</b></span>, а затем <span class="hl-text">выводит в консоль символы на чётных
             индексах</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Python
 P
@@ -138,7 +138,7 @@ o</code></pre>
         <h2>Практическое Задание 21.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, а затем <span
             class="hl-text">выводит в консоль символы на чётных индексах в одну строку</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
 
@@ -150,7 +150,7 @@ T s  t i g</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, <span
             class="hl-text">формирует обратную строку</span> и <span class="hl-text">выводит в консоль результат</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
 
@@ -163,7 +163,7 @@ gnirtS tesT</code></pre>
           <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Это палиндром."</b></span> или <span
             class="string"><b>"Это не палиндром."</b></span> в зависимости от слова.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите слово: <span class="input">потоп</span>
 
@@ -174,7 +174,7 @@ gnirtS tesT</code></pre>
         <h2>Практическое Задание 21.5</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">выводит в консоль последние <span class="number"><b>3</b></span> символа строки</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcdef</span>
 
@@ -186,7 +186,7 @@ gnirtS tesT</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">выводит в консоль каждый символ</span> и <span class="hl-text">следующий за ним символ в
             строке</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
 
@@ -199,7 +199,7 @@ gnirtS tesT</code></pre>
             class="hl-text">имя</span> и <span class="hl-text">отчество</span>, <span class="hl-text">формирует из
             первых букв новую строку</span>, а затем <span class="hl-text">выводит в консоль полученную строку</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите фамилию: <span class="input">Lebra</span>
 Введите имя: <span class="input">Teston</span>
@@ -213,7 +213,7 @@ gnirtS tesT</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">символ</span>, затем <span class="hl-text">выводит в консоль количество вхождения символа в
             строку</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
 Введите символ: <span class="input">t</span>
@@ -225,7 +225,7 @@ gnirtS tesT</code></pre>
         <h2>Практическое Задание 21.9</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли в одной строке дату</span> и <span
             class="hl-text">выводит в консоль данные на разных строчках</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите дату (dd/mm/yyyy): <span class="input">10/12/2023</span>
 
@@ -239,7 +239,7 @@ gnirtS tesT</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span
               class="number"><b>16</b></span>-значный номер карты</span> и <span class="hl-text">выводит в консоль этот
             же номер, но с замаскированными символами, кроме последних четырёх</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите номер карты: <span class="input">5869586958695869</span>
 
