--- a/Урок 21-27. Строки. Списки/Python - PT22.html
+++ b/Урок 21-27. Строки. Списки/Python - PT22.html
@@ -125,7 +125,7 @@
         <h2>Практическое Задание 22.1</h2>
         <p>Напишите программу, которая <span class="hl-text">реализует понятие <span
               class="string"><b>"Срезы"</b></span> для строк</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
 Введите начало среза: <span class="input">0</span>
@@ -140,7 +140,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в
             консоль исходную строку с удалёнными символами</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите символ для удаления: <span class="input">d</span>
@@ -154,7 +154,7 @@
             class="hl-text">символ, который нужно заменить</span>. Затем <span class="hl-text">запрашивает с консоли
             символ замены</span>. После этого программа <span class="hl-text">выводит в консоль исходную строку с
             заменёнными символами</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите заменяемый символ: <span class="input">d</span>
@@ -168,7 +168,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в
             консоль исходную строку с удалённым вторым по счёту символом</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите символ для удаления: <span class="input">d</span>
@@ -182,7 +182,7 @@
             class="hl-text">символ для поиска</span>. Программа должна <span class="hl-text">найти все вхождения
             символа</span> и <span class="hl-text">добавить их индексы в новую строку</span>, затем <span
             class="hl-text">вывести в консоль</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите символ поиска: <span class="input">a</span>
