--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -126,7 +126,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли температуры в одной строке</span> и
           <span class="hl-text">выводит в консоль среднее значение</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите температуры через пробел: <span class="input">25 26 30 29 30</span>
 
@@ -138,7 +138,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут
             пустую строку</span>. Затем программа <span class="hl-text">формирует список</span> и <span
             class="hl-text">выводит в консоль минимальную оценку</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите оценку (1): <span class="input">12</span>
 Введите оценку (2): <span class="input">11</span>
