--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -231,7 +231,7 @@ _ - свободные места</code></pre>
         <h2>Домашнее Задание 28.2</h2>
         <p>Напишите функцию <span class="function"><b>print_BG</b></span>, которая <span class="hl-text">отображает в
             консоли форматированный текст, указанный ниже</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>"Don't compare yourself with anyone in this world...
 if you do so, you are insulting yourself."
