--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
@@ -270,7 +270,7 @@
           <br>— Имена пользователей <span class="hl-text">только второго приложения</span>
           <br>— Имена <span class="hl-text">всех пользователей</span>
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите имена пользователей первого приложения через пробел: <span class="input">Teston Bob Tom Jack</span>
 Введите имена пользователей второго приложения через пробел: <span class="input">Bob Kate Jack Astrid</span>
