--- a/Урок 07-09. Введение в Python/Python - PT07.html
+++ b/Урок 07-09. Введение в Python/Python - PT07.html
@@ -163,7 +163,7 @@
       <div class="right-rect">
         <h2>Практическое Задание 7.1</h2>
         <p>Выведите в консоль следующую надпись, сохранив формат.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Nothing
 will work
@@ -173,7 +173,7 @@ unless you do.</code></pre>
       <div class="right-rect">
         <h2>Практическое Задание 7.2</h2>
         <p>Выведите в консоль следующую надпись, сохранив формат.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>"Anyone who
     stops
@@ -188,7 +188,7 @@ unless you do.</code></pre>
           <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code
             class="python"><b>end</b></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>H-E-L-L-O W*O*R*L*D</code></pre>
         </div>
@@ -198,7 +198,7 @@ unless you do.</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли имя</span> и <span
             class="hl-text">возраст</span>, затем <span class="hl-text">выводит введённые данные с указанием, к чему они
             принадлежат.</span></p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите имя: <span class="input">Teston</span>
 Введите возраст: <span class="input">25</span>
