--- a/Урок 07-09. Введение в Python/Python - PT09.html
+++ b/Урок 07-09. Введение в Python/Python - PT09.html
@@ -130,7 +130,7 @@
             class="hl-text">произведение</span> и <span class="hl-text">частное этих двух чисел</span>. Вывод оформите в
           соответствии с примером.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первое положительное число: <span class="input">8</span>
 Введите второе положительное число: <span class="input">2</span>
@@ -147,7 +147,7 @@
           Напишите программу, которая <code><span class="number"><b>5</b></span></code> <span class="hl-text">раз
             запрашивает ввод денег как числа с консоли</span> и <span class="hl-text">выводит в консоль итоговую сумму
             денег</span>. Используйте сокращённую запись для суммирования.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первую сумму: <span class="input">150</span>
 Введите вторую сумму: <span class="input">250</span>
@@ -175,7 +175,7 @@
           код, который проверяется умножением цифр. Напишите программу, которая <span class="hl-text">запрашивает с
             консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль произведение цифр
             числа</span>. Используйте сокращённую запись для произведения.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">5869</span>
 
@@ -189,7 +189,7 @@
             class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль
             в требуемом виде</span>. Используйте разделитель при выводе.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">5869</span>
 
@@ -208,7 +208,7 @@
           <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству площади поклейки, затем
           нацело поделить на метры в рулоне.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите площадь поклейки (метры): <span class="input">98</span>
 Введите количество метров в рулоне: <span class="input">25</span>
@@ -223,10 +223,11 @@
         <p><span class="hl-text">Teston Lebra</span> любит путешествовать на своей машине. Он собрался в долгую дорогу,
           но не знает, сколько денег ему понадобится на бензин. Напишите программу, которая <span
             class="hl-text">запрашивает с консоли общее расстояние поездки в километрах</span>, <span
-            class="hl-text">средний расход топлива на 100 км (в литрах)</span> и <span class="hl-text">стоимость литра
+            class="hl-text">средний расход топлива на <code><span class="number"><b>100</b></span></code> км (в
+            литрах)</span> и <span class="hl-text">стоимость литра
             бензина</span>, затем <span class="hl-text">выводит в консоль общую стоимость бензина для поездки</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите общее расстояние поездки в километрах: <span class="input">500</span>
 Введите средний расход топлива на 100 км (литры): <span class="input">8</span>
@@ -239,7 +240,7 @@
         <h2>Практическое Задание 9.9</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли месяц как число</span> и <span
             class="hl-text">выводит в консоль, к какому кварталу относится этот месяц</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите номер месяца: <span class="input">1</span>
 
@@ -256,7 +257,7 @@
         <p>Программа должна считать по формуле:
           <br><code><b><span class="number">{сумма_вклада}</span> = <span class="number">{начальная_сумма_вклада}</span> * ((<span class="number">1</span> + <span class="number">{годовая_процентная_ставка}</span> / <span class="number">100</span>) ** <span class="number">{количество_лет}</span>)</b></code>
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начальную сумму вклада: <span class="input">1000</span>
 Введите годовую процентную ставку: <span class="input">5</span>
@@ -271,7 +272,7 @@
           программу, которая <span class="hl-text">запрашивает с консоли количество сотрудников</span> и <span
             class="hl-text">количество подарков</span>, затем <span class="hl-text">выводит в консоль сколько подарков
             досталось каждому сотруднику</span> и <span class="hl-text">сколько подарков осталось в корзине</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите количество сотрудников: <span class="input">4</span>
 Введите количество подарков: <span class="input">11</span>
