--- a/Урок 10-14. Операторы ветвлений/Python - PT10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT10.html
@@ -244,7 +244,7 @@ print(num_1 % num_2 == 0)</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">в зависимости от числа выводит в консоль положительное</span>, <span
             class="hl-text">отрицательное</span> или <span class="hl-text">равно нулю</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5</span>
 
@@ -257,7 +257,7 @@ print(num_1 % num_2 == 0)</code></pre>
             class="hl-text">выводит в консоль выбор</span> - найти сумму чисел или произведение чисел. Затем <span
             class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span
             class="hl-text">выводит в консоль сумму</span> или <span class="hl-text">произведение</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">5</span>
 Введите второе число: <span class="input">10</span>
@@ -273,7 +273,7 @@ print(num_1 % num_2 == 0)</code></pre>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">выводит в консоль</span>, что оно <span class="hl-text">чётное</span> или <span
             class="hl-text">нечётное</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">4</span>
 
@@ -286,7 +286,7 @@ print(num_1 % num_2 == 0)</code></pre>
             class="hl-text">выводит в консоль максимальное из двух чисел</span>. Если числа одинаковые, то программа
           <span class="hl-text">об этом сообщает</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">3</span>
 Введите второе число: <span class="input">6</span>
@@ -304,7 +304,7 @@ print(num_1 % num_2 == 0)</code></pre>
           затем <span class="hl-text">запрашивает с консоли подтверждение того, что клиент является постоянным</span>, и
           <span class="hl-text">выводит в консоль итоговую стоимость с учётом скидки</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите цену первого товара: <span class="input">200</span>
 Введите цену второго товара: <span class="input">650</span>
@@ -320,7 +320,7 @@ print(num_1 % num_2 == 0)</code></pre>
             class="hl-text">сумму, которую дал покупатель</span>, затем <span class="hl-text">выводит в консоль
             сдачу</span>, если покупатель дал больше, чем требуется, или <span class="hl-text">сумму доплаты</span>,
           если покупатель дал меньше.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите итоговую стоимость: <span class="input">1250</span>
 Введите оплату покупателя: <span class="input">2000</span>
@@ -338,7 +338,7 @@ print(num_1 % num_2 == 0)</code></pre>
             class="hl-text">запрашивает с консоли сумму корзины</span> и <span class="hl-text">выводит в консоль сколько
             клиент должен оплатить за корзину</span> и <span class="hl-text">за доставку</span>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите сумму корзины: <span class="input">1200</span>
 
