--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -176,7 +176,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
             class="hl-text">выводит в консоль первое число, которое делится на
             <code><span class="number"><b>7</b></span></code> нацело после введённого числа</span>.</p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">14</span>
 
@@ -222,7 +222,7 @@
             class="hl-text">Выводится</span> <code><span class="string"><b>"Выполнение"</b></span></code>.
           <br>— Проход должен быть с конца числа.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">203231202320</span>
 
@@ -247,7 +247,7 @@
           <code><span class="string"><b>"Последовательность неубывающая."</b></span></code>, если каждое следующее
           введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">2</span>
 Введите число: <span class="input">2</span>
@@ -266,7 +266,7 @@
           также <code><span class="string"><b>"Все цифры рассмотрены."</b></span></code>, если программа прошлась по
           всем цифрам, и <code><span class="string"><b>"Перебор цифр был прерван."</b></span></code> в противном случае.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">12032</span>
 
@@ -305,7 +305,7 @@
 randint(1, 100)  # Использование функции для генерации одного числа от 1 до 100 включительно</code></pre>
         </div>
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите загаданное число: <span class="input">5</span>
 Загаданное число больше.
@@ -330,7 +330,7 @@ randint(1, 100)  # Использование функции для генера
           <code><span class="string"><b>"Неверный IP адрес."</b></span></code>. В противном случае <span
             class="hl-text">выводит</span> <code><span class="string"><b>"IP адрес корректный."</b></span></code>.
         </p>
-        <h3>Консоль:</h3>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите первую часть IP: <span class="input">243</span>
 Введите вторую часть IP: <span class="input">277</span>
